--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -16,6 +16,7 @@ jobs:
       LLVM_MINGW_DIR: "$HOME/llvm-mingw"
       BUILD_DIR: "$GITHUB_WORKSPACE/build"
       WCP_DIR: "$GITHUB_WORKSPACE/wcp"
+      MESON_CACHE: "$HOME/.cache/meson"
 
     steps:
 
@@ -33,55 +34,69 @@ jobs:
           libdbus-1-dev libdb-dev \
           libavcodec-dev libavformat-dev libavutil-dev libswscale-dev \
           libudev-dev ca-certificates
+        sudo ln -sf /usr/bin/pkgconf /usr/local/bin/pkg-config
 
-    - name: Setup LLVM-Mingw ARM64
+    - name: APT cache (optional)
+      uses: actions/cache@v4
+      with:
+        path: /var/cache/apt
+        key: apt-cache-${{ runner.os }}-${{ env.WINE_VERSION }}
+
+    - name: Setup LLVM‑Mingw ARM64
       run: |
-        mkdir -p "$HOME/llvm-mingw"
+        mkdir -p "$LLVM_MINGW_DIR"
         wget -q "https://github.com/mstorsjo/llvm-mingw/releases/download/${LLVM_MINGW_VERSION}/llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-aarch64.tar.xz"
         tar -xJf "llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-aarch64.tar.xz" \
-          -C "$HOME/llvm-mingw" --strip-components=1
+          -C "$LLVM_MINGW_DIR" --strip-components=1
         rm "llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-aarch64.tar.xz"
-        echo "$HOME/llvm-mingw/bin" >> "$GITHUB_PATH"
+        echo "$LLVM_MINGW_DIR/bin" >> "$GITHUB_PATH"
 
-    - name: Cross-compiler test & diagnostics
+    - name: Cross compiler diagnostic
       run: |
         set -eux
-        echo "=== LLVM-Mingw Contents ==="
-        ls -1 "$HOME/llvm-mingw/bin"
-        echo "=== Tools versions ==="
         aarch64-w64-mingw32-clang --version
         aarch64-w64-mingw32-clang++ --version
-        aarch64-w64-mingw32-dlltool --version || true
-        lld --version || true
-        echo "=== Cross-compile test ==="
-        cat << 'EOF' > /tmp/conftest.c
-        int main(void){return 0;}
-        EOF
-        aarch64-w64-mingw32-clang --target=aarch64-w64-mingw32 \
-          -o /tmp/conftest.exe /tmp/conftest.c -Wl,--no-undefined
-        file /tmp/conftest.exe
+        echo 'int main(){return 0;}' > /tmp/test.c
+        aarch64-w64-mingw32-clang --target=aarch64-w64-mingw32 -o /tmp/test.exe /tmp/test.c -Wl,--no-undefined
+        file /tmp/test.exe
 
     - name: Clone Wine + Staging
       run: |
-        git clone --depth 1 -b wine-11.1 https://gitlab.winehq.org/wine/wine.git wine
-        git clone --depth 1 -b v11.1 https://gitlab.winehq.org/wine/wine-staging.git staging
+        git clone https://gitlab.winehq.org/wine/wine.git wine
+        git clone https://gitlab.winehq.org/wine/wine-staging.git staging
 
-    - name: Apply Staging (exclude fsync/esync)
+    - name: Prepare Wine source + staging
       run: |
-        set -e
-        cd staging
+        set -eux
+
+        # Wine: generate configure
+        cd wine
+        autoreconf -fiv
+
+        # Apply staging patches into wine directory
+        cd ../staging
         ./staging/patchinstall.py DESTDIR=../wine --all --no-autoconf || true
+
         cd ../wine
+
+        # Roll back problematic patches
         git apply -R staging/patches/ntdll-fsync/0001*.patch || true
         git apply -R staging/patches/server-Fsync/0001*.patch || true
         git apply -R staging/patches/ntdll-esync/0001*.patch || true
         git apply -R staging/patches/server-Esync/0001*.patch || true
         git apply -R staging/patches/ntdll-Synchronization/0001*.patch || true
+
+        # Re‑gen configure after staging
         autoreconf -fiv
+
+        # Verify configure exists
+        test -f configure
+        ./configure --help | head -n 20
 
     - name: Build Wine with Wow64
       run: |
-        mkdir -p "$BUILD_DIR"; cd "$BUILD_DIR"
+        mkdir -p "$BUILD_DIR"
+        cd "$BUILD_DIR"
         export PKG_CONFIG=pkg-config
         export PKG_CONFIG_PATH="/usr/lib/aarch64/pkgconfig:${PKG_CONFIG_PATH:-}"
         export CC=aarch64-w64-mingw32-clang
@@ -96,19 +111,26 @@ jobs:
           --enable-win64 \
           --enable-wow64 \
           --enable-archs=arm64ec,aarch64 \
-          --disable-tests \
-          --enable-ntsync
+          --disable-tests
+
         make -j1
         DESTDIR="$PWD/install" make install
 
-    - name: Build Turnip Vulkan (Mesa)
+    - name: Meson cache (optional)
+      uses: actions/cache@v4
+      with:
+        path: ${{ env.MESON_CACHE }}
+        key: meson-cache-${{ runner.os }}-${{ env.WINE_VERSION }}
+
+    - name: Build Turnip Vulkan (Mesa TU‑8)
       run: |
-        git clone https://gitlab.freedesktop.org/mesa/mesa.git meson-mesa
-        mkdir meson-mesa-build
-        cd meson-mesa-build
-        meson setup . ../meson-mesa \
-          -Dgallium-vulkan=enabled -Dvulkan-drivers=turnip \
-          -Dplatforms=x11,drm \
+        git clone --depth 1 https://github.com/whitebelyash/mesa-tu8 mesa-tu8
+        mkdir mesa-tu8-build
+        cd mesa-tu8-build
+        meson setup . ../mesa-tu8 \
+          -Dvulkan-drivers=turnip \
+          -Dgallium-drivers= \
+          -Dplatforms= \
           -Dbuildtype=release
         ninja -v
         ninja install --destdir="$BUILD_DIR/external/mesa"
@@ -116,16 +138,22 @@ jobs:
     - name: Integrate DXVK/VKD3D
       run: |
         mkdir -p "$BUILD_DIR/external/dxvk" "$BUILD_DIR/external/vkd3d"
-        wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/DXVK-GPLASYNC-ARM64EC/dxvk-gplasync-arm64ec-2.7.1-1.wcp"
-        tar -xJf dxvk-gplasync-arm64ec-2.7.1-1.wcp -C "$BUILD_DIR/external/dxvk"
-        wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/VKD3D-PROTON-ARM64EC/vkd3d-proton-arm64ec-3.0b.wcp"
-        tar -xJf vkd3d-proton-arm64ec-3.0b.wcp -C "$BUILD_DIR/external/vkd3d"
+        wget -q \
+          "https://github.com/Arihany/WinlatorWCPHub/releases/download/DXVK-GPLASYNC-ARM64EC/dxvk-gplasync-arm64ec-2.7.1-1.wcp"
+        tar -xJf dxvk-gplasync-arm64ec-2.7.1-1.wcp \
+          -C "$BUILD_DIR/external/dxvk"
+        wget -q \
+          "https://github.com/Arihany/WinlatorWCPHub/releases/download/VKD3D-PROTON-ARM64EC/vkd3d-proton-arm64ec-3.0b.wcp"
+        tar -xJf vkd3d-proton-arm64ec-3.0b.wcp \
+          -C "$BUILD_DIR/external/vkd3d"
 
     - name: Unpack FEXCore
       run: |
         mkdir -p "$WCP_DIR/lib/wine/arm64ec-windows"
-        wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/FEXCore/FEXCore-2601.wcp" -O FEXCore.wcp
-        tar -xJf FEXCore.wcp -C "$WCP_DIR/lib/wine/arm64ec-windows"
+        wget -q \
+          "https://github.com/Arihany/WinlatorWCPHub/releases/download/FEXCore/FEXCore-2601.wcp" -O FEXCore.wcp
+        tar -xJf FEXCore.wcp \
+          -C "$WCP_DIR/lib/wine/arm64ec-windows"
 
     - name: Prepare PHAT .wcp
       run: |
@@ -142,7 +170,8 @@ jobs:
         cp -rv "$BUILD_DIR/external/mesa/"* "$WCP_DIR/mesa/turnip/"
 
         printf "export WINEPREFIX=~/.wine\nexport WINEARCH=win64\n" > "$WCP_DIR/env.sh"
-        printf '{ "version":"%s","arch":"arm64ec","type":"phat" }' "$WINE_VERSION" > "$WCP_DIR/info.json"
+        printf '{ "version":"%s","arch":"arm64ec","type":"phat" }' \
+          "$WINE_VERSION" > "$WCP_DIR/info.json"
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
