--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -9,14 +9,12 @@ on:
 jobs:
   build-arm64ec:
     runs-on: ubuntu-24.04-arm
-
     env:
       WINE_VERSION: "11.1"
       LLVM_MINGW_VERSION: "20251216"
       LLVM_MINGW_DIR: "$HOME/llvm-mingw"
       BUILD_DIR: "$GITHUB_WORKSPACE/build"
       WCP_DIR: "$GITHUB_WORKSPACE/wcp"
-      MESON_CACHE: "$HOME/.cache/meson"
 
     steps:
 
@@ -36,12 +34,6 @@ jobs:
           libudev-dev ca-certificates
         sudo ln -sf /usr/bin/pkgconf /usr/local/bin/pkg-config
 
-    - name: APT cache (optional)
-      uses: actions/cache@v4
-      with:
-        path: /var/cache/apt
-        key: apt-cache-${{ runner.os }}-${{ env.WINE_VERSION }}
-
     - name: Setup LLVM‑Mingw ARM64
       run: |
         mkdir -p "$LLVM_MINGW_DIR"
@@ -51,7 +43,133 @@ jobs:
         rm "llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-aarch64.tar.xz"
         echo "$LLVM_MINGW_DIR/bin" >> "$GITHUB_PATH"
 
-    - name: Cross compiler diagnostic
+    - name: Cross‑compiler diagnostics
+      run: |
+        set -eux
+        aarch64-w64-mingw32-clang --version
+        aarch64-w64-mingw32-clang++ --version
+        echo 'int main(){return 0;}' > /tmp/check.c
+        aarch64-w64-mingw32-clang --target=aarch64-w64-mingw32 -o /tmp/check.exe /tmp/check.c -Wl,--no-undefined
+        file /tmp/check.exe
+
+    - name: Clone Wine and Wine‑Staging
+      run: |
+        git clone https://gitlab.winehq.org/wine/wine.git wine
+        git clone https://gitlab.winehq.org/wine/wine-staging.git wine-staging
+
+    - name: Apply staging patches and generate configure
+      run: |
+        set -eux
+
+        # 1) Prepare wine sources
+        cd wine
+
+        # 2) Ensure configure scripts are generated
+        autoreconf -fiv
+
+        # 3) Apply staging patches via patchinstall.py
+        cd ../wine-staging
+        ./staging/patchinstall.py DESTDIR=../wine --all --no-autoconf || true
+
+        # 4) Remove problematic sync patches if present
+        cd ../wine
+
+        for p in \
+          staging/patches/ntdll-fsync/0001*.patch \
+          staging/patches/server-Fsync/0001*.patch \
+          staging/patches/ntdll-esync/0001*.patch \
+          staging/patches/server-Esync/0001*.patch \
+          staging/patches/ntdll-Synchronization/0001*.patch; do
+          if [ -f $p ]; then
+            git apply -R "$p" || true
+          fi
+        done
+
+        # 5) Regenerate configure after staging
+        autoreconf -fiv
+
+        # 6) Sanity check configure existence
+        test -f configure
+        echo "CONFIGURE EXISTS:"
+        ls -l configure
+        ./configure --help | head -n 30
+
+    - name: Configure & build Wine
+      run: |
+        mkdir -p "$BUILD_DIR"
+        cd "$BUILD_DIR"
+        export PKG_CONFIG=pkg-config
+        export PKG_CONFIG_PATH="/usr/lib/aarch64/pkgconfig:${PKG_CONFIG_PATH:-}"
+        export CC=aarch64-w64-mingw32-clang
+        export CXX=aarch64-w64-mingw32-clang++
+        export AR=aarch64-w64-mingw32-ar
+        export RANLIB=aarch64-w64-mingw32-ranlib
+        export STRIP=aarch64-w64-mingw32-strip
+
+        # Run configure in wine root
+        ../wine/configure \
+          --host=aarch64-w64-mingw32 \
+          --with-wine-tools=../host \
+          --enable-win64 \
+          --enable-wow64 \
+          --enable-archs=arm64ec,aarch64 \
+          --disable-tests
+
+        make -j1
+        DESTDIR="$PWD/install" make install
+
+    - name: Build Turnip (Mesa TU)
+      run: |
+        git clone --depth 1 https://github.com/whitebelyash/mesa-tu8 mesa-tu8
+        mkdir mesa-tu8-build
+        cd mesa-tu8-build
+        meson setup . ../mesa-tu8 \
+          -Dvulkan-drivers=turnip \
+          -Dgallium-drivers= \
+          -Dplatforms= \
+          -Dbuildtype=release
+        ninja -v
+        ninja install --destdir="$BUILD_DIR/external/mesa"
+
+    - name: Integrate DXVK & VKD3D
+      run: |
+        mkdir -p "$BUILD_DIR/external/dxvk" "$BUILD_DIR/external/vkd3d"
+        wget -q \
+          https://github.com/Arihany/WinlatorWCPHub/releases/download/DXVK-GPLASYNC-ARM64EC/dxvk-gplasync-arm64ec-2.7.1-1.wcp
+        tar -xJf dxvk-gplasync-arm64ec-2.7.1-1.wcp -C "$BUILD_DIR/external/dxvk"
+        wget -q \
+          https://github.com/Arihany/WinlatorWCPHub/releases/download/VKD3D-PROTON-ARM64EC/vkd3d-proton-arm64ec-3.0b.wcp
+        tar -xJf vkd3d-proton-arm64ec-3.0b.wcp -C "$BUILD_DIR/external/vkd3d"
+
+    - name: Unpack FEXCore
+      run: |
+        mkdir -p "$WCP_DIR/lib/wine/arm64ec-windows"
+        wget -q \
+          https://github.com/Arihany/WinlatorWCPHub/releases/download/FEXCore/FEXCore-2601.wcp -O FEXCore.wcp
+        tar -xJf FEXCore.wcp -C "$WCP_DIR/lib/wine/arm64ec-windows"
+
+    - name: Prepare PHAT .wcp tree
+      run: |
+        rm -rf "$WCP_DIR"
+        mkdir -p "$WCP_DIR"/{bin,share/wine,dxvk/arm64ec,vkd3d/arm64ec,mesa/turnip}
+        mkdir -p "$WCP_DIR/lib/wine"/{aarch64-unix,aarch64-windows,arm64ec-windows}
+
+        cp "$BUILD_DIR/install/bin/"{wine,wine64,wineboot,wineserver} "$WCP_DIR/bin/"
+        cp -rv "$BUILD_DIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-unix/"
+        cp -rv "$BUILD_DIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-windows/"
+        cp -rv "$WCP_DIR/lib/wine/arm64ec-windows/"* "$WCP_DIR/lib/wine/arm64ec-windows/"
+        cp -rv "$BUILD_DIR/external/dxvk/"* "$WCP_DIR/dxvk/arm64ec/"
+        cp -rv "$BUILD_DIR/external/vkd3d/"* "$WCP_DIR/vkd3d/arm64ec/"
+        cp -rv "$BUILD_DIR/external/mesa/"* "$WCP_DIR/mesa/turnip/"
+
+        printf "export WINEPREFIX=~/.wine\nexport WINEARCH=win64\n" > "$WCP_DIR/env.sh"
+        printf '{ "version":"%s","arch":"arm64ec","type":"phat" }' "$WINE_VERSION" > "$WCP_DIR/info.json"
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: wine-arm64ec-phat
+        path: $WCP_DIR
       run: |
         set -eux
         aarch64-w64-mingw32-clang --version
@@ -65,33 +183,38 @@ jobs:
         git clone https://gitlab.winehq.org/wine/wine.git wine
         git clone https://gitlab.winehq.org/wine/wine-staging.git staging
 
-    - name: Prepare Wine source + staging
-      run: |
-        set -eux
+  
+ - name: Prepare Wine + Staging + generate configure
+    run: |
+    set -eux
 
-        # Wine: generate configure
-        cd wine
-        autoreconf -fiv
+    # 1) Ensure working directory
+    cd "$GITHUB_WORKSPACE"
 
-        # Apply staging patches into wine directory
-        cd ../staging
-        ./staging/patchinstall.py DESTDIR=../wine --all --no-autoconf || true
+    # 2) Clone Wine main and staging (shallow)
+    git clone --depth 1 -b wine-11.1 https://gitlab.winehq.org/wine/wine.git wine
+    git clone --depth 1 -b v11.1 https://gitlab.winehq.org/wine/wine-staging.git wine-staging
 
-        cd ../wine
+    # 3) Generate configure for wine
+    cd wine
+    autoreconf -fiv
 
-        # Roll back problematic patches
-        git apply -R staging/patches/ntdll-fsync/0001*.patch || true
-        git apply -R staging/patches/server-Fsync/0001*.patch || true
-        git apply -R staging/patches/ntdll-esync/0001*.patch || true
-        git apply -R staging/patches/server-Esync/0001*.patch || true
-        git apply -R staging/patches/ntdll-Synchronization/0001*.patch || true
+    # 4) Apply staging patches using the staging script
+    cd ../wine-staging
+    ./staging/patchinstall.py DESTDIR=../wine --all --no-autoconf || true
 
-        # Re‑gen configure after staging
-        autoreconf -fiv
+    # 5) Return to wine and ensure configure is still present
+    cd ../wine
+    autoreconf -fiv
+    test -f configure  # confirm
+    ls -l configure
 
-        # Verify configure exists
-        test -f configure
-        ./configure --help | head -n 20
+    # 6) Output first few lines of configure help for extra confidence
+    ./configure --help | head -n 20
+
+    # 7) Print environment for diagnostics
+    env | sort
+
 
     - name: Build Wine with Wow64
       run: |
