--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -22,141 +22,124 @@ jobs:
 
     steps:
 
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y --no-install-recommends \
-          build-essential wget git python3 gettext \
-          pkgconf cmake ninja-build meson autoconf automake libtool \
-          libc6-dev libfreetype-dev libfontconfig-dev \
-          libsdl2-dev libpulse-dev libasound2-dev \
-          libdbus-1-dev libdb-dev \
-          libavcodec-dev libavformat-dev libavutil-dev libswscale-dev \
-          libudev-dev ca-certificates patchutils bison flex
-        sudo ln -sf /usr/bin/pkgconf /usr/local/bin/pkg-config
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y --no-install-recommends \
+            build-essential wget git python3 gettext \
+            pkgconf cmake ninja-build meson autoconf automake libtool \
+            libc6-dev libfreetype-dev libfontconfig-dev \
+            libsdl2-dev libpulse-dev libasound2-dev \
+            libdbus-1-dev libdb-dev \
+            libavcodec-dev libavformat-dev libavutil-dev libswscale-dev \
+            libudev-dev ca-certificates patchutils bison flex
+          sudo ln -sf /usr/bin/pkgconf /usr/local/bin/pkg-config
 
-    - name: Setup LLVM-Mingw ARM64
-      run: |
-        mkdir -p "$LLVM_MINGW_DIR"
-        wget -q "https://github.com/mstorsjo/llvm-mingw/releases/download/${LLVM_MINGW_VERSION}/llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-aarch64.tar.xz"
-        tar -xJf llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-aarch64.tar.xz \
-          -C "$LLVM_MINGW_DIR" --strip-components=1
-        echo "$LLVM_MINGW_DIR/bin" >> "$GITHUB_PATH"
+      - name: Setup LLVM-Mingw ARM64
+        run: |
+          mkdir -p "$LLVM_MINGW_DIR"
+          wget -q "https://github.com/mstorsjo/llvm-mingw/releases/download/${LLVM_MINGW_VERSION}/llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-aarch64.tar.xz"
+          tar -xJf llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-aarch64.tar.xz \
+            -C "$LLVM_MINGW_DIR" --strip-components=1
+          echo "$LLVM_MINGW_DIR/bin" >> "$GITHUB_PATH"
 
-    - name: Cross-compiler test & diagnostics
-      run: |
-        set -eux
-        aarch64-w64-mingw32-clang --version
-        echo 'int main(){return 0;}' > /tmp/conftest.c
-        aarch64-w64-mingw32-clang --target=aarch64-w64-mingw32 -o /tmp/x.exe /tmp/conftest.c -Wl,--no-undefined
-        file /tmp/x.exe
+      - name: Cross-compiler test
+        run: |
+          set -eux
+          aarch64-w64-mingw32-clang --version
+          echo 'int main(){return 0;}' > /tmp/test.c
+          aarch64-w64-mingw32-clang --target=aarch64-w64-mingw32 -o /tmp/x.exe /tmp/test.c -Wl,--no-undefined
+          file /tmp/x.exe
 
-    - name: Clone Wine & Wine-Staging
-      run: |
-        mkdir -p "$WORKDIR/src"
-        cd "$WORKDIR/src"
-        git clone --depth 1 -b wine-11.1 https://github.com/wine-mirror/wine.git wine
-        git clone --depth 1 -b master https://github.com/wine-staging/wine-staging.git wine-staging
+      - name: Clone Wine & Wine Staging
+        run: |
+          mkdir -p "$WORKDIR/src"
+          cd "$WORKDIR/src"
+          git clone --depth 1 -b wine-11.1 https://github.com/wine-mirror/wine.git wine
+          git clone --depth 1 -b v11.1 https://gitlab.winehq.org/wine/wine-staging.git wine-staging
 
-    - name: Apply staging patches
-      run: |
-        set -eux
-        cd "$STAGINGDIR"
-        ./staging/patchinstall.py DESTDIR="$SRCDIR" --all --no-autoconf
+      - name: Apply staging patches
+        run: |
+          set -eux
+          cd "$STAGINGDIR"
+          ./staging/patchinstall.py DESTDIR="$SRCDIR" --all --no-autoconf
 
-        # Remove sync patches that conflict with NTsync if present
-        for p in \
-          "$SRCDIR/staging/patches/ntdll-fsync/"* \
-          "$SRCDIR/staging/patches/server-Fsync/"* \
-          "$SRCDIR/staging/patches/ntdll-esync/"* \
-          "$SRCDIR/staging/patches/server-Esync/"* \
-          "$SRCDIR/staging/patches/ntdll-Synchronization/"*; do
-          [ -f "$p" ] && git -C "$SRCDIR" apply -R "$p" || true
-        done
+          cd "$SRCDIR"
+          autoreconf -fiv
 
-        cd "$SRCDIR"
-        autoreconf -fiv
+      - name: Validate configure
+        run: |
+          cd "$SRCDIR"
+          test -f configure
+          ./configure --help | head -n 20
 
-    - name: Validate configure
-      run: |
-        cd "$SRCDIR"
-        test -f configure
-        ./configure --help | head -n 20
+      - name: Build Wine
+        run: |
+          mkdir -p "$BUILDDIR"
+          cd "$BUILDDIR"
+          export CC=aarch64-w64-mingw32-clang
+          export CXX=aarch64-w64-mingw32-clang++
+          export PKG_CONFIG=pkg-config
+          export PKG_CONFIG_PATH="/usr/lib/aarch64/pkgconfig:${PKG_CONFIG_PATH:-}"
 
-    - name: Build Wine
-      run: |
-        mkdir -p "$BUILDDIR"
-        cd "$BUILDDIR"
-        export CC=aarch64-w64-mingw32-clang
-        export CXX=aarch64-w64-mingw32-clang++
-        export PKG_CONFIG=pkg-config
-        export PKG_CONFIG_PATH="/usr/lib/aarch64/pkgconfig:${PKG_CONFIG_PATH:-}"
+          "$SRCDIR/configure" \
+            --host=aarch64-w64-mingw32 \
+            --enable-win64 \
+            --enable-wow64 \
+            --enable-archs=arm64ec,aarch64 \
+            --disable-tests
 
-        "$SRCDIR/configure" \
-          --host=aarch64-w64-mingw32 \
-          --enable-win64 \
-          --enable-wow64 \
-          --enable-archs=arm64ec,aarch64 \
-          --disable-tests
+          make -j1
+          DESTDIR="$BUILDDIR/install" make install
 
-        make -j1
-        DESTDIR="$BUILDDIR/install" make install
+      - name: Build Turnip Vulkan
+        run: |
+          git clone https://github.com/whitebelyash/mesa-tu8 meson-mesa
+          mkdir meson-mesa-build
+          cd meson-mesa-build
+          meson setup . ../meson-mesa \
+            -Dvulkan-drivers=turnip \
+            -Dgallium-drivers= \
+            -Dplatforms=none \
+            -Dbuildtype=release
+          ninja
+          ninja install --destdir="$EXTERNALDIR/mesa"
 
-    - name: Build Turnip Vulkan (Mesa)
-      run: |
-        git clone --depth 1 https://github.com/whitebelyash/mesa-tu8 meson-mesa
-        mkdir meson-mesa-build
-        cd meson-mesa-build
-        meson setup . ../meson-mesa \
-          -Dvulkan-drivers=turnip \
-          -Dgallium-drivers= \
-          -Dplatforms=none \
-          -Dbuildtype=release
-        ninja -v
-        ninja install --destdir="$EXTERNALDIR/mesa"
+      - name: Integrate DXVK/VKD3D
+        run: |
+          mkdir -p "$EXTERNALDIR/dxvk" "$EXTERNALDIR/vkd3d"
+          wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/DXVK-GPLASYNC-ARM64EC/dxvk-gplasync-arm64ec-2.7.1-1.wcp"
+          tar -xJf dxvk-gplasync-arm64ec-2.7.1-1.wcp -C "$EXTERNALDIR/dxvk"
+          wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/VKD3D-PROTON-ARM64EC/vkd3d-proton-arm64ec-3.0b.wcp"
+          tar -xJf vkd3d-proton-arm64ec-3.0b.wcp -C "$EXTERNALDIR/vkd3d"
 
-    - name: Integrate DXVK/VKD3D
-      run: |
-        mkdir -p "$EXTERNALDIR/dxvk" "$EXTERNALDIR/vkd3d"
-        wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/DXVK-GPLASYNC-ARM64EC/dxvk-gplasync-arm64ec-2.7.1-1.wcp"
-        tar -xJf dxvk-gplasync-arm64ec-2.7.1-1.wcp -C "$EXTERNALDIR/dxvk"
-        wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/VKD3D-PROTON-ARM64EC/vkd3d-proton-arm64ec-3.0b.wcp"
-        tar -xJf vkd3d-proton-arm64ec-3.0b.wcp -C "$EXTERNALDIR/vkd3d"
+      - name: Unpack FEXCore
+        run: |
+          mkdir -p "$WCP_DIR/lib/wine/arm64ec-windows"
+          wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/FEXCore/FEXCore-2601.wcp" -O FEXCore.wcp
+          tar -xJf FEXCore.wcp -C "$WCP_DIR/lib/wine/arm64ec-windows"
 
-    - name: Unpack FEXCore
-      run: |
-        mkdir -p "$WCP_DIR/lib/wine/arm64ec-windows"
-        wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/FEXCore/FEXCore-2601.wcp" -O FEXCore.wcp
-        tar -xJf FEXCore.wcp -C "$WCP_DIR/lib/wine/arm64ec-windows"
+      - name: Prepare PHAT .wcp
+        run: |
+          rm -rf "$WCP_DIR"
+          mkdir -p "$WCP_DIR"/{bin,share/wine,dxvk/arm64ec,vkd3d/arm64ec,mesa/turnip}
+          mkdir -p "$WCP_DIR/lib/wine"/{aarch64-unix,aarch64-windows,arm64ec-windows}
 
-    - name: Prepare PHAT .wcp
-      run: |
-        rm -rf "$WCP_DIR"
-        mkdir -p "$WCP_DIR"/{bin,share/wine,dxvk/arm64ec,vkd3d/arm64ec,mesa/turnip}
-        mkdir -p "$WCP_DIR/lib/wine"/{aarch64-unix,aarch64-windows,arm64ec-windows}
+          cp "$BUILDDIR/install/bin/"{wine,wine64,wineboot,wineserver} "$WCP_DIR/bin/"
+          cp -rv "$BUILDDIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-unix/"
+          cp -rv "$BUILDDIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-windows/"
+          cp -rv "$WCP_DIR/lib/wine/arm64ec-windows/"* "$WCP_DIR/lib/wine/arm64ec-windows/"
+          cp -rv "$EXTERNALDIR/dxvk/"* "$WCP_DIR/dxvk/arm64ec/"
+          cp -rv "$EXTERNALDIR/vkd3d/"* "$WCP_DIR/vkd3d/arm64ec/"
+          cp -rv "$EXTERNALDIR/mesa/"* "$WCP_DIR/mesa/turnip/"
 
-        cp "$BUILDDIR/install/bin/"{wine,wine64,wineboot,wineserver} "$WCP_DIR/bin/"
-        cp -rv "$BUILDDIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-unix/"
-        cp -rv "$BUILDDIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-windows/"
-        cp -rv "$WCP_DIR/lib/wine/arm64ec-windows/"* "$WCP_DIR/lib/wine/arm64ec-windows/"
-        cp -rv "$EXTERNALDIR/dxvk/"* "$WCP_DIR/dxvk/arm64ec/"
-        cp -rv "$EXTERNALDIR/vkd3d/"* "$WCP_DIR/vkd3d/arm64ec/"
-        cp -rv "$EXTERNALDIR/mesa/"* "$WCP_DIR/mesa/turnip/"
+          printf "export WINEPREFIX=~/.wine\nexport WINEARCH=win64\n" > "$WCP_DIR/env.sh"
+          printf '{ "version":"%s","arch":"arm64ec","type":"phat" }' "$WINE_VERSION" > "$WCP_DIR/info.json"
 
-        printf "export WINEPREFIX=~/.wine\nexport WINEARCH=win64\n" > "$WCP_DIR/env.sh"
-        printf '{ "version":"%s","arch":"arm64ec","type":"phat" }' "$WINE_VERSION" > "$WCP_DIR/info.json"
-
-    - name: Upload .wcp
-      uses: actions/upload-artifact@v4
-      with:
-        name: wine-arm64ec-phat
-        path: "$WCP_DIR"
-
-    # 13. Upload the Wine .wcp artifact
-    - name: Upload Wine .wcp
-      uses: actions/upload-artifact@v4
-      with:
-        name: wine-arm64ec-phat
-        path: "$WCP_DIR"
+      - name: Upload .wcp
+        uses: actions/upload-artifact@v4
+        with:
+          name: wine-arm64ec-phat
+          path: "$WCP_DIR"
